# cpp-cotask

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
cmake/: example-file.cmake  example-task.cmake  example-tcp-client.cmake  example-tcp-server.cmake
example/: file.cpp  task.cpp  tcp_client.cpp  tcp_server.cpp
src/cotask/: cotask.hpp  file.hpp  impl.hpp  tcp.hpp  timer.hpp  utils.hpp
src/cotask/windows/: cotask.cpp  cotask.hpp  file.cpp  file.hpp  tcp.cpp  tcp.hpp  timer.cpp  timer.hpp
